--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
               </div>
             </div>
             <p class="py-3">
-              I am an ambitious and adaptable individual passionate about continuously developing my skills
+              I'm an ambitious and adaptable individual passionate about continuously developing my skills
                in various fields. With a background in science and a keen interest in technology, photography
-               , data analysis, or creative projects. I am eager to contribute to projects and 
-               opportunities that align with my expertise and aspirations.
+               , data analysis, and creative projects. I am eager to contribute to projects and 
+               opportunities, esspecially align with my expertise and aspirations.
             </p>
           </div>
         </div>
@@ -323,7 +323,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Here's my achievements and my projects.</p>
+        <p>Here are my achievements and my projects.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -332,67 +332,71 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-task">Task</li>
-            <li data-filter=".filter-license">License</li>
+            <li data-filter=".filter-project">Project</li>
+            <li data-filter=".filter-achievement">Achievement</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-task">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-project">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/form_login.PNG" class="img-fluid" alt="">
+                <a href="https://muhabdil.github.io/form-login.github.io/" title="More Details">
+                  <img src="assets/img/portfolio/form-login.PNG" class="img-fluid" alt="Kalkulator">
+                </a>
                 <div class="portfolio-info">
                   <h4>FORM LOGIN</h4>
-                  <p>https://muhabdil.github.io/form-login.github.io/</p>
-                  <a href="assets/img/portfolio/form_login.PNG" title="FORM LOGIN" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <p>My 1st project at "Pemrograman Web 1" class./</p>
+                  <a href="assets/img/portfolio/form_login.PNG" title="FORM LOGIN" data-gallery="portfolio-gallery-project" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-license">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-achievement">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/sololearn-html.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Sololearn</h4>
                   <p>Introduction to HTML</p>
-                  <a href="assets/img/portfolio/sololearn-html.jpg" title="Sololearn" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/sololearn-html.jpg" title="Sololearn" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-task">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-project">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/kalkulator.PNG" class="img-fluid" alt="">
+                <a href="https://muhabdil.github.io/kalkulator.github.io/" title="More Details">
+                  <img src="assets/img/portfolio/kalkulator.PNG" class="img-fluid" alt="Kalkulator">
+                </a>
                 <div class="portfolio-info">
                   <h4>Kalkulator</h4>
-                  <p>https://muhabdil.github.io/kalkulator.github.io/</p>
-                  <a href="assets/img/portfolio/kalkulator.PNG" title="Kalkulator" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <p>My 2nd project at "Pemrograman Web 1" class.</p>
+                  <a href="assets/img/portfolio/kalkulator.PNG" title="Kalkulator" data-gallery="portfolio-gallery-project" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-license">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-achievement">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/DQL-EX.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>DQLab</h4>
                   <p>Bootcamp data analysis with excel</p>
-                  <a href="assets/img/portfolio/DQL-EX.jpg" title="DQLab" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/DQL-EX.jpg" title="DQLab" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-license">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-achievement">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/DQLab-DS.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>DQLab</h4>
                   <p>Freeclass: data science fundamental</p>
-                  <a href="assets/img/portfolio/DQLab-DS.jpg" title="DQLab" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/DQLab-DS.jpg" title="DQLab" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
