--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Ready to Work:</strong> <span>Ready</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Science Major High School</span></li>
                 </ul>
               </div>
@@ -240,9 +240,9 @@
 
             <div class="resume-item pb-0">
               <h4>Muhammad Abdillah</h4>
-              <p><em>Hi! I am Muhammad Abdillah. I was born in Jakarta on March 24, 2003. I am still a Technical Informatics student 
+              <p><em>Hi! My name is Muhammad Abdillah. I was born in Jakarta on March 24, 2003. I am still an Information Technology student 
                 at Universitas Pamulang. I have some professional experiences in several companies. In addition, I received some 
-                training in the fields of communication, IT, and data analysis.</em></p>
+                training in the fields of communication, IT, ,data analysis, and Japanesse Language.</em></p>
               <ul>
                 <li>Tangerang City</li>
                 <li>mabdillah953@gmail.com</li>
@@ -251,7 +251,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor of IT &amp; Informatics Engineer</h4>
+              <h4>Bachelor of IT &amp; Information Technical</h4>
               <h5>2022 - 2026[est]</h5>
               <p><em>University of Pamulang</em></p>
               <p>In addition to work, I also study at Pamulang University. I took employee classes so I'd still 
@@ -263,8 +263,8 @@
               <h4>Senior High School &amp; Science Major</h4>
               <h5>2018 - 2021</h5>
               <p><em>SMA Negeri 54 Jakarta</em></p>
-              <p>When i was school, I participated in a math olympiad but i was lost. I also participated in 
-                an Islamic spiritual extracurricular activity. In this extracurricular activity, 
+              <p>When i was school, I participated in a math olympiad but i was lost. Beside that, I also participated in 
+                an Islamic spiritual extracurricular activity. In this extracurricular, 
                 I was given responsibility for an event as the person in charge of the da'i and da'iya competition.</p>
             </div><!-- Edn Resume Item -->
 
@@ -277,10 +277,10 @@
               <h5>November 2023 - May 2024</h5>
               <p><em>MyRepublik, South Tangerang </em></p>
               <ul>
-                <li>Selling MyRepublic’s (internet) produk from door-to-door.</li>
+                <li>Selling company products (home internet).</li>
                 <li>Follow up customers complaint to management. </li>
-                <li>Giving service to all customers</li>
                 <li>Selling product untill surpass the monthly sales target</li>
+                <li>Giving service to customers</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -289,23 +289,23 @@
               <h5>April 2022 - September 2023</h5>
               <p><em>PT. SIL, Management of CBD Ciledug Family Mall, Tangerang City</em></p>
               <ul>
-                <li>Servicing all tenants mall by processing administration, ensuring, and reporting tenant’s 
-                  problems to the department that could solve the tenants problem.</li>
-                <li>Reporting the mall condition every two hours</li>
-                <li>Inspecting f&b tenants</li>
+                <li>Provided to mall tenants by administrative services and complaint handling.</li>
+                <li>Reported mall condition to management in every two hours</li>
+                <li>Inspecting tenants,especially f&b tenants</li>
                 <li>Carry out tasks from Leader, Supervisor, and Chief</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Promotion Satff</h4>
-              <h5>November 2021 - April 2023</h5>
+              <h4>Promotion Staff</h4>
+              <h5>November 2021 - April 2022</h5>
               <p><em>PT. SIL, Management of CBD Ciledug Family Mall, Tangerang City </em></p>
               <ul>
-                <li>Managing and documenting data Promotion assets, and document events.</li>
-                <li>Promoting tenants product and Malls product. </li>
-                <li>Running and plaining events</li>
-                <li>Designing event posters, social media, promotions video.</li>
+                <li>Plaining, running, and documentating events in the mall</li>
+                <li>Managing Promotion datas, assets, and documents.</li>
+                <li>Designing event posters and celebration day greetings.</li>
+                <li>Managing social media Mall (Instagram, Youtube, Facebook, etc).</li>
+                <li>Promoting tenants product and also media promotion product (Advertising).</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
