--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
       <a href="https://www.instagram.com/muh__abdillah" class="instagram" target="_blank">
         <i class="bi bi-instagram"></i>
       </a>
-      <a href="https://pin.it/4ZH0aaQhL" class="pinterest" target="_blank">
-        <i class="bi bi-pinterest"></i>
+      <a href="https://youtube.com/@mhd_abdil24?si=33VbgrnIEFQcTNoP" class="youtube" target="_blank">
+        <i class="bi bi-youtube"></i>
+      </a>
+      <a href="https://vsco.co/muhabdillah24" class="vsco" target="_blank">
+        <i class="bi bi-vsco"></i>
       </a>
     </div>    
 
