--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- Favicons -->
   <link href="assets/img/icon-MA.webp" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -62,8 +63,9 @@
         <i class="bi bi-youtube"></i>
       </a>
       <a href="https://vsco.co/muhabdillah24" class="vsco" target="_blank">
-        <i class="bi bi-vsco"></i>
+        <i class="fab fa-vsco"></i> <!-- Gunakan ini jika FontAwesome mendukung VSCO -->
       </a>
+
     </div>    
 
     <nav id="navmenu" class="navmenu">
