--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <i class="bi bi-youtube"></i>
       </a>
       <a href="https://vsco.co/muhabdillah24" class="vsco" target="_blank">
-        <i class="fab fa-vsco"></i> <!-- Gunakan ini jika FontAwesome mendukung VSCO -->
+        <i class="fab fa-vsco"></i> 
       </a>
 
     </div>    
