--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portofolio Details - iPortofolio Bootstrap Template</title>
+  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -28,15 +28,15 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: iPortofolio
-  * Template URL: https://bootstrapmade.com/iPortofolio-bootstrap-Portofolio-websites-template/
+  * Template Name: iPortfolio
+  * Template URL: https://bootstrapmade.com/iPortfolio-bootstrap-Portfolio-websites-template/
   * Updated: Jun 29 2024 with Bootstrap v5.3.3
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
 
-<body class="Portofolio-details-page">
+<body class="Portfolio-details-page">
 
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
@@ -64,7 +64,7 @@
         <li><a href="#hero"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <li><a href="#Portofolio"><i class="bi bi-images navicon"></i> Portofolio</a></li>
+        <li><a href="#Portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
         <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
@@ -94,25 +94,25 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Portofolio Details</h1>
+        <h1 class="mb-2 mb-lg-0">Portfolio Details</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Portofolio Details</li>
+            <li class="current">Portfolio Details</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Portofolio Details Section -->
-    <section id="Portofolio-details" class="Portofolio-details section">
+    <!-- Portfolio Details Section -->
+    <section id="Portfolio-details" class="Portfolio-details section">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4">
 
           <div class="col-lg-8">
-            <div class="Portofolio-details-slider swiper init-swiper">
+            <div class="Portfolio-details-slider swiper init-swiper">
 
               <script type="application/json" class="swiper-config">
                 {
@@ -133,19 +133,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/Portofolio/app-1.jpg" alt="">
+                  <img src="assets/img/Portfolio/app-1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/Portofolio/sololearn-html.jpg" alt="">
+                  <img src="assets/img/Portfolio/sololearn-html.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/Portofolio/branding-1.jpg" alt="">
+                  <img src="assets/img/Portfolio/branding-1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/Portofolio/books-1.jpg" alt="">
+                  <img src="assets/img/Portfolio/books-1.jpg" alt="">
                 </div>
 
               </div>
@@ -154,7 +154,7 @@
           </div>
 
           <div class="col-lg-4">
-            <div class="Portofolio-info" data-aos="fade-up" data-aos-delay="200">
+            <div class="Portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
@@ -163,7 +163,7 @@
                 <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
               </ul>
             </div>
-            <div class="Portofolio-description" data-aos="fade-up" data-aos-delay="300">
+            <div class="Portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Exercitationem repudiandae officiis neque suscipit</h2>
               <p>
                 Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
@@ -175,7 +175,7 @@
 
       </div>
 
-    </section><!-- /Portofolio Details Section -->
+    </section><!-- /Portfolio Details Section -->
 
   </main>
 
@@ -183,7 +183,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortofolio</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
