--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-project">
               <div class="portfolio-content h-100">
-                <a href="https://muhabdil.github.io/kalkulator.github.io/" title="More Details">
+                <a href="https://muhabdil.github.io/kalkulator.github.io/" title="More Details" target="_blank">
                   <img src="assets/img/portfolio/kalkulator.PNG" class="img-fluid" alt="Kalkulator">
                 </a>
                 <div class="portfolio-info">
