--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                   <i class="bi bi-telephone flex-shrink-0"></i>
                 </a>                
                 <div>
-                  <h3>Call Us</h3>
+                  <h3>Calls</h3>
                   <p>+62 838 6640 0626</p>
                 </div>
               </div><!-- End Info Item -->
@@ -553,7 +553,7 @@
                   <i class="bi bi-envelope flex-shrink-0"></i>
                 </a>
                 <div>
-                  <h3>Email Us</h3>
+                  <h3>Email</h3>
                   <p>mabdillah953@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
