--- a/index.html
+++ b/index.html
@@ -392,14 +392,13 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-project">
               <div class="portfolio-content h-100">
-                <a href="https://muhabdil.github.io/kalkulator.github.io/" title="More Details">
+                <a href="https://muhabdil.github.io/kalkulator.github.io/" title="More Details" target="_blank">
                   <img src="assets/img/portfolio/kalkulator.PNG" class="img-fluid" alt="Kalkulator">
                 </a>
                 <div class="portfolio-info">
                   <h4>Kalkulator</h4>
                   <p>My 2nd project at "Pemrograman Web 1" class.</p>
                   <a href="assets/img/portfolio/kalkulator.PNG" title="Kalkulator" data-gallery="portfolio-gallery-project" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Kalkulator Item -->
