--- a/index.html
+++ b/index.html
@@ -341,13 +341,13 @@
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-achievement">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/sololearn-html.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
+                <a href="https://www.sololearn.com/certificates/CC-DRIIWI3P" title="SoloLearn Introduction to HTML" target="_blank">
+                  <img src="assets/img/portfolio/sololearn-html.jpg" class="img-fluid" alt="SoloLearn">
+                </a>                
+              <div class="portfolio-info">
                   <h4>Sololearn</h4>
                   <p>Introduction to HTML</p>
-                  <a href="assets/img/portfolio/sololearn-html.jpg" title="Sololearn" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
+                  <a href="assets/img/portfolio/sololearn-html.jpg" title="Sololearn" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>                </div>
               </div>
             </div><!-- End Portfolio SoloLearn HTML Item -->
 
@@ -451,7 +451,6 @@
                   <h4>DQLab</h4>
                   <p>Bootcamp data analysis with excel</p>
                   <a href="assets/img/portfolio/DQL-EX.jpg" title="DQLab" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio DQLab Item -->
@@ -465,7 +464,6 @@
                   <h4>DQLab</h4>
                   <p>Freeclass: data science fundamental</p>
                   <a href="assets/img/portfolio/DQLab-DS.jpg" title="DQLab" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio DQLab Item -->
