--- a/index.html
+++ b/index.html
@@ -233,6 +233,12 @@
 
       </div><!-- End Section Title -->
 
+      <div>
+        <a href="https://drive.google.com/file/d/1otfhkY1b_4w_Y6Xlv7jvC-7Nhi1C2jDg/view?usp=sharing" title="Resume" target="_blank">
+          Download my resume
+        </a>
+      </div><!-- End download resume -->
+      
       <div class="container">
 
         <div class="row">
