--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/ava.jpg" class="img-fluid" alt="">
+            <img src="assets/img/ava2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>About Me</h2>
