--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
+        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
   </header>
 
   <main class="main">
@@ -100,7 +101,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/ava.jpg" class="img-fluid" alt="">
+            <img src="assets/img/ava2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>About Me</h2>
@@ -232,6 +233,12 @@
 
       </div><!-- End Section Title -->
 
+      <div>
+        <a href="https://drive.google.com/file/d/1otfhkY1b_4w_Y6Xlv7jvC-7Nhi1C2jDg/view?usp=sharing" title="Resume" target="_blank">
+          Download my resume
+        </a>
+      </div><!-- End download resume -->
+      
       <div class="container">
 
         <div class="row">
@@ -340,13 +347,13 @@
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-achievement">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/sololearn-html.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
+                <a href="https://www.sololearn.com/certificates/CC-DRIIWI3P" title="SoloLearn Introduction to HTML" target="_blank">
+                  <img src="assets/img/portfolio/sololearn-html.jpg" class="img-fluid" alt="SoloLearn">
+                </a>                
+              <div class="portfolio-info">
                   <h4>Sololearn</h4>
                   <p>Introduction to HTML</p>
-                  <a href="assets/img/portfolio/sololearn-html.jpg" title="Sololearn" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
+                  <a href="assets/img/portfolio/sololearn-html.jpg" title="Sololearn" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>                </div>
               </div>
             </div><!-- End Portfolio SoloLearn HTML Item -->
 
@@ -391,14 +398,13 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-project">
               <div class="portfolio-content h-100">
-                <a href="https://muhabdil.github.io/kalkulator.github.io/" title="More Details">
+                <a href="https://muhabdil.github.io/kalkulator.github.io/" title="More Details" target="_blank">
                   <img src="assets/img/portfolio/kalkulator.PNG" class="img-fluid" alt="Kalkulator">
                 </a>
                 <div class="portfolio-info">
                   <h4>Kalkulator</h4>
                   <p>My 2nd project at "Pemrograman Web 1" class.</p>
                   <a href="assets/img/portfolio/kalkulator.PNG" title="Kalkulator" data-gallery="portfolio-gallery-project" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Kalkulator Item -->
@@ -451,7 +457,6 @@
                   <h4>DQLab</h4>
                   <p>Bootcamp data analysis with excel</p>
                   <a href="assets/img/portfolio/DQL-EX.jpg" title="DQLab" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio DQLab Item -->
@@ -465,7 +470,6 @@
                   <h4>DQLab</h4>
                   <p>Freeclass: data science fundamental</p>
                   <a href="assets/img/portfolio/DQLab-DS.jpg" title="DQLab" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio DQLab Item -->
@@ -512,6 +516,76 @@
         </div>
       </div>
     </section><!-- /Portfolio Section -->
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Contact</h2>
+        <p>For more informations</p>
+      </div><!-- End Section Title -->
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-5">
+
+            <div class="info-wrap">
+              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
+                <i class="bi bi-geo-alt flex-shrink-0"></i>
+                <div>
+                  <h3>Address</h3>
+                  <p>Kp. Poncol, Pedurenan, Karang Tengah, Tangerang City 15159</p>
+                </div>
+              </div><!-- End Info Item -->
+
+              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
+                <a href="https://wa.me/6283866400626" target="_blank">
+                  <i class="bi bi-telephone flex-shrink-0"></i>
+                </a>                
+                <div>
+                  <h3>Calls</h3>
+                  <p>+62 838 6640 0626</p>
+                </div>
+              </div><!-- End Info Item -->
+
+              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
+                <a href="https://mabdillah953@gmail.com" target="_blank">
+                  <i class="bi bi-envelope flex-shrink-0"></i>
+                </a>
+                <div>
+                  <h3>Email</h3>
+                  <p>mabdillah953@gmail.com</p>
+                </div>
+              </div><!-- End Info Item -->
+
+              <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.835434509907!2d106.6988402!3d-6.2212155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68c5f9fc3f3b3f%3A0x98a557b3e0b6fc89!2s[Lokasi]!5e0!3m2!1sen!2sid!4v1674832816069"
+                frameborder="0" 
+                style="border:0; width: 100%; height: 270px;" 
+                allowfullscreen="" 
+                loading="lazy">
+              </iframe>
+          
+
+            </div>
+          </div>
+
+          <div class="col-lg-7">
+            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+              <div class="row gy-4">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdCNlvuLun-rSM2rXRID_DGiBm_dtXI8l3K_jMGCm26PLLr0Q/viewform?embedded=true" width="640" height="645" frameborder="0" marginheight="0" marginwidth="0">Memuat…</iframe>
+              </div>
+            </form>
+          </div><!-- End Contact Form -->
+
+        </div>
+
+      </div>
+
+    </section><!-- /Contact Section -->
 
   </main>
 
