--- a/starter-page.html
+++ b/starter-page.html
@@ -110,7 +110,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Starter Section</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>For more informations</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up">
