--- a/index.html
+++ b/index.html
@@ -230,14 +230,10 @@
         <p>Outside of work and studies, I enjoy building professional connections through platforms like 
           LinkedIn and sharing personal moments on Instagram. My career so far has been a journey of growth,
            and I am excited to continue exploring new opportunities where I can contribute and thrive.</p>
-
-      </div><!-- End Section Title -->
-
-      <div>
         <a href="https://drive.google.com/file/d/1otfhkY1b_4w_Y6Xlv7jvC-7Nhi1C2jDg/view?usp=sharing" title="Resume" target="_blank">
-          Download my resume
+          Download My Curriculum Vintae for More Details
         </a>
-      </div><!-- End download resume -->
+      </div><!-- End Section Title -->
       
       <div class="container">
 
@@ -255,7 +251,7 @@
                 <li>Tangerang City</li>
                 <li>mabdillah953@gmail.com</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
@@ -265,7 +261,7 @@
               <p>In addition to work, I also study at Pamulang University. I took employee classes so I'd still 
                 continue my work though. During college, I did not participate in many extracurricular activities. But I 
                 still maintained my achievements and still participated in mandatory activities on campus.</p>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
 
             <div class="resume-item">
               <h4>Senior High School &amp; Science Major</h4>
@@ -274,7 +270,7 @@
               <p>When i was school, I participated in a math olympiad but i was lost. Beside that, I also participated in 
                 an Islamic spiritual extracurricular activity. In this extracurricular, 
                 I was given responsibility for an event as the person in charge of the da'i and da'iya competition.</p>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
 
           </div>
 
@@ -290,7 +286,7 @@
                 <li>Selling product untill surpass the monthly sales target</li>
                 <li>Giving service to customers</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
 
             <div class="resume-item">
               <h4>Tenant Relation Staff</h4>
@@ -302,7 +298,7 @@
                 <li>Inspecting tenants,especially f&b tenants</li>
                 <li>Carry out tasks from Leader, Supervisor, and Chief</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
 
             <div class="resume-item">
               <h4>Promotion Staff</h4>
@@ -315,7 +311,7 @@
                 <li>Managing social media Mall (Instagram, Youtube, Facebook, etc).</li>
                 <li>Promoting tenants product and also media promotion product (Advertising).</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
 
           </div>
 
