--- a/index.html
+++ b/index.html
@@ -381,6 +381,20 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-project">
               <div class="portfolio-content h-100">
+                <a href="https://muhabdil.github.io/utsabdillah/" title="UTS" target="_blank">
+                  <img src="assets/img/portfolio/uts.PNG" class="img-fluid" alt="UTS">
+                </a>
+                <div class="portfolio-info">
+                  <h4>Dashboard</h4>
+                  <p>My UTS project at "Pemrograman Web 1" class.</p>
+                  <a href="assets/img/portfolio/form_login.PNG" title="FORM LOGIN" data-gallery="portfolio-gallery-project" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio UTS -->
+
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-project">
+              <div class="portfolio-content h-100">
                 <a href="https://muhabdil.github.io/form-login.github.io/" title="Form Login" target="_blank">
                   <img src="assets/img/portfolio/form_login.PNG" class="img-fluid" alt="Form Login">
                 </a>
