js inter index.html

--- a/index.html
+++ b/index.html
@@ -374,7 +374,20 @@
                 <div class="portfolio-info">
                   <h4>Sololearn</h4>
                   <p>Introduction to JavaScript</p>
-                  <a href="assets/img/portfolio/sololearn-html.jpg" title="Sololearn" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/sololearn-js.png" title="Sololearn" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio SoloLearn JS Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-achievement">
+              <div class="portfolio-content h-100">
+                <a href="https://api2.sololearn.com/v2/certificates/CC-7DM7DUEM/image/jpg?t=638703784986633810" title="SoloLearn JavaScript Intermediate" target="_blank">
+                  <img src="assets/img/portfolio/sololearn-js-inter.jpg" class="img-fluid" alt="SoloLearn">
+                </a>
+                <div class="portfolio-info">
+                  <h4>Sololearn</h4>
+                  <p>JavaScript Intermediate</p>
+                  <a href="assets/img/portfolio/sololearn-js-inter.jpg" title="Sololearn" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio SoloLearn JS Item -->
