liked sololearn index.html

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-achievement">
               <div class="portfolio-content h-100">
-                <a href="https://api2.sololearn.com/v2/certificates/CC-7DM7DUEM/image/jpg?t=638703784986633810" title="SoloLearn JavaScript Intermediate" target="_blank">
+                <a href="https://www.sololearn.com/certificates/CC-7DM7DUEM" title="SoloLearn JavaScript Intermediate" target="_blank">
                   <img src="assets/img/portfolio/sololearn-js-inter.jpg" class="img-fluid" alt="SoloLearn">
                 </a>
                 <div class="portfolio-info">
