--- a/index.html
+++ b/index.html
@@ -216,21 +216,18 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>My name is Muhammad Abdillah, and I was born in Jakarta on March 24, 2003. My journey into the 
-          professional world has been shaped by a strong dedication to learning and continuous improvement. 
-          I began my career in November 2021 when I joined PT. Sari Indah Lestari as a Staff Administration 
-          of Promotion for CBD Ciledug Family Mall.</p> <br>
-        <p>In April 2022, I transitioned within the same company to a new role as a Staff of Tenant 
-          Relations & Customer Service. This marked a significant growth in my career, as I was entrusted 
-          with ensuring tenant satisfaction.</p><br>
-        <p>In December 2023, I took on a new challenge by joining MyRepublic as an Account Executive. 
-          Here, I focused on selling internet services directly to customers through door-to-door 
-          interactions. My efforts paid off when I successfully exceeded my sales targets 
-          in February and March 2024, proving my ability to deliver results in a competitive environment.</p><br>
-        <p>Outside of work and studies, I enjoy building professional connections through platforms like 
-          LinkedIn and sharing personal moments on Instagram. My career so far has been a journey of growth,
-           and I am excited to continue exploring new opportunities where I can contribute and thrive.</p>
-        <a href="https://drive.google.com/file/d/1otfhkY1b_4w_Y6Xlv7jvC-7Nhi1C2jDg/view?usp=sharing" title="Resume" target="_blank">
+        <p>My name is Muhammad Abdillah, born in Jakarta on March 24, 2003. I began my career in November 2021 
+          at PT. Sari Indah Lestari as a Staff Administration of Promotion for CBD Ciledug Family Mall. In 
+          April 2022, I advanced to the role of Staff of Tenant Relations & Customer Service, focusing on 
+          tenant satisfaction.</p> <br>
+        <p>In December 2023, I joined MyRepublic as an Account Executive, where I successfully exceeded sales 
+          targets in February and March 2024 through direct customer engagement. Since December 2024, I have been 
+          interning as an Account Manager at RKP Management, managing client relationships with brands and sellers, 
+          monitoring campaign performance, and preparing KPI reports covering metrics like order volume, traffic, 
+          and engagement.</p><br>
+        <p>Outside work, I enjoy networking on LinkedIn and sharing moments on Instagram. I am eager to embrace 
+          new challenges and continue growing professionally.</p><br>
+        <a href="https://drive.google.com/file/d/14nSWO6R1maF7ZyJfKXYUMRDEpJXJtspi/view?usp=sharing" title="Resume" target="_blank">
           Download My Curriculum Vintae for More Details
         </a>
       </div><!-- End Section Title -->
@@ -277,14 +274,26 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>RKP Management</h4>
+              <h5>December 2024 – Present</h5>
+              <p><em>RKP Management, Tangerang </em></p>
+              <ul>
+                <li>Managed and maintained relationships with clients, 
+                  including brands and sellers, to ensure satisfaction and smooth collaboration.</li>
+                <li>Monitored campaign performance to evaluate effectiveness.</li>
+                <li>Prepared KPI reports, including metrics such as order volume, traffic, and engagement.</li>
+              </ul>
+            </div><!-- End Resume Item -->
+            
+            <div class="resume-item">
               <h4>Account Executive</h4>
               <h5>November 2023 - May 2024</h5>
               <p><em>MyRepublik, South Tangerang </em></p>
               <ul>
-                <li>Selling company products (home internet).</li>
-                <li>Follow up customers complaint to management. </li>
-                <li>Selling product untill surpass the monthly sales target</li>
-                <li>Giving service to customers</li>
+                <li>Sold company products (home internet).</li>
+                <li>Followed up on customer complaints to management.</li>
+                <li>Surpassed monthly sales targets consistently.</li>
+                <li>Provided excellent customer service.</li>
               </ul>
             </div><!-- End Resume Item -->
 
@@ -293,10 +302,10 @@
               <h5>April 2022 - September 2023</h5>
               <p><em>PT. SIL, Management of CBD Ciledug Family Mall, Tangerang City</em></p>
               <ul>
-                <li>Provided to mall tenants by administrative services and complaint handling.</li>
-                <li>Reported mall condition to management in every two hours</li>
-                <li>Inspecting tenants,especially f&b tenants</li>
-                <li>Carry out tasks from Leader, Supervisor, and Chief</li>
+                <li>Provided administrative services and handled tenant complaints.</li>
+                <li>Reported mall conditions to management every two hours.</li>
+                <li>Conducted regular inspections of tenants, especially F&B outlets.</li>
+                <li>Executed tasks assigned by the Leader, Supervisor, and Chief.</li>
               </ul>
             </div><!-- End Resume Item -->
 
@@ -305,11 +314,11 @@
               <h5>November 2021 - April 2022</h5>
               <p><em>PT. SIL, Management of CBD Ciledug Family Mall, Tangerang City </em></p>
               <ul>
-                <li>Plaining, running, and documentating events in the mall</li>
-                <li>Managing Promotion datas, assets, and documents.</li>
-                <li>Designing event posters and celebration day greetings.</li>
-                <li>Managing social media Mall (Instagram, Youtube, Facebook, etc).</li>
-                <li>Promoting tenants product and also media promotion product (Advertising).</li>
+                <li>Planned, executed, and documented mall events.</li>
+                <li>Managed promotion data, assets, and documents.</li>
+                <li>Designed event posters and celebratory greetings.</li>
+                <li>Handled the mall’s social media accounts (Instagram, YouTube, Facebook, etc.).</li>
+                <li>Promoted tenant products and media advertising services.</li>
               </ul>
             </div><!-- End Resume Item -->
 
@@ -381,7 +390,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-achievement">
               <div class="portfolio-content h-100">
-                <a href="https://www.sololearn.com/certificates/CC-7DM7DUEM" title="SoloLearn JavaScript Intermediate" target="_blank">
+                <a href="https://api2.sololearn.com/v2/certificates/CC-7DM7DUEM/image/jpg?t=638703784986633810" title="SoloLearn JavaScript Intermediate" target="_blank">
                   <img src="assets/img/portfolio/sololearn-js-inter.jpg" class="img-fluid" alt="SoloLearn">
                 </a>
                 <div class="portfolio-info">
