--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="col-lg-8 content">
             <h2>About Me</h2>
             <p class="fst-italic py-3">
-              Living my dream.
+              "Living my dream."
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -146,7 +146,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>I have quite good skills in several fields</p>
+        <p>I possess strong skills across multiple disciplines.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -156,23 +156,23 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>Microsoft Apps</span> <i class="val">80%</i></span>
+              <span class="skill"><span>Microsoft Office (Excel, Outlook, Adobe, etc)</span> <i class="val">95%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Web Development</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Web Development</span> <i class="val">75%</i></span>
+              <span class="skill"><span>Communications</span> <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>Communications</span> <i class="val">85%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -188,16 +188,16 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Design</span> <i class="val">55%</i></span>
+              <span class="skill"><span>Google Workspaces (Sheets, Docs, Slides, etc) </span> <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Others</span> <i class="val">50%</i></span>
+              <span class="skill"><span>Design</span> <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -251,7 +251,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor of IT &amp; Information Technical</h4>
+              <h4>Bachelor of Information Technical</h4>
               <h5>2022 - 2026[est]</h5>
               <p><em>University of Pamulang</em></p>
               <p>In addition to work, I also study at Pamulang University. I took employee classes so I'd still 
@@ -260,7 +260,7 @@
             </div><!-- End Resume Item -->
 
             <div class="resume-item">
-              <h4>Senior High School &amp; Science Major</h4>
+              <h4>Science Major Senior High School</h4>
               <h5>2018 - 2021</h5>
               <p><em>SMA Negeri 54 Jakarta</em></p>
               <p>When i was school, I participated in a math olympiad but i was lost. Beside that, I also participated in 
